assets/css/test.css
@-webkit-keyframes progress-bar-stripes{from{background-position:40px 0}to{background-position:0 0}}@-o-keyframes progress-bar-stripes{from{background-position:40px 0}to{background-position:0 0}}@keyframes progress-bar-stripes{from{background-position:40px 0}to{background-position:0 0}}.progress{height:20px;margin-bottom:20px;overflow:hidden;background-color:#f5f5f5;border-radius:4px;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.1);box-shadow:inset 0 1px 2px rgba(0,0,0,.1)}.progress-bar{float:left;width:0;height:100%;font-size:12px;line-height:20px;color:#fff;text-align:center;background-color:#337ab7;-webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,.15);box-shadow:inset 0 -1px 0 rgba(0,0,0,.15);-webkit-transition:width .6s ease;-o-transition:width .6s ease;transition:width .6s ease}.progress-bar-striped,.progress-striped .progress-bar{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);-webkit-background-size:40px 40px;background-size:40px 40px}.progress-bar.active,.progress.active .progress-bar{-webkit-animation:progress-bar-stripes 2s linear infinite;-o-animation:progress-bar-stripes 2s linear infinite;animation:progress-bar-stripes 2s linear infinite}.progress-bar-success{background-color:#5cb85c}.progress-striped .progress-bar-success{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent)}.progress-bar-info{background-color:#5bc0de}.progress-striped .progress-bar-info{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent)}.progress-bar-warning{background-color:#f0ad4e}.progress-striped .progress-bar-warning{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent)}.progress-bar-danger{background-color:#d9534f}.progress-striped .progress-bar-danger{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent)}

.progress {
    margin: 10px;
    width: 100%;
  }

.div-batting {
    display: inline-flex;
    background-color: hsl(0deg 0% 100% / 10%);
    backdrop-filter: blur(4px);
    font-size: 16px;
    border: 1px solid white;
    margin-top: 1rem;
    width: 100%;
}

.div-pitching {
    display: inline-flex;
    background-color: hsl(0deg 0% 100% / 10%);
    backdrop-filter: blur(4px);
    font-size: 16px;
    border: 1px solid white;
    margin-top: 1rem;
    width: 100%;
}

.collapsed {
    display: none;
}

table td {
    padding: 0.25em 0.25em;
}

table {
    margin: 0 0 1rem 0;
    width: 20%;
    border: 1px solid white;
}

thead .added:nth-child(odd) {
    background-color: hsl(0deg 0% 0% / 10%);
}

input {
    color: #333333;
    width: 15%;
}

toggle:hover {
    cursor:pointer;
}

hr {
    margin: 1rem;
}

#header > *:before {
    display: none;
}

#team {
    display:none!important;
}

#Pteam {
    display:none!important;
}

#hitting_div {
    text-align: left;
}

#pitching_div {
    text-align: left;
}

.hidden {
    display: none;
}

#player-stats table {
    width: 100%!important;
}

.table-splits {
    background: #00000055;
    padding: 0.5rem;
}

/*#player-id {
    background-color: #00000038;
    padding: 1px 10px;
}*/

h6 {
    font-size: 1rem!important;
    margin: 0 1rem 0 0!important;
}


#header .content {
    width: 90%;
    border-bottom: none
}

#fakefooter {
    font-size: 12px;
}

#header .content p {
    font-size: 12px;
}

.toggler {
    border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
    width: fit-content;
    cursor: pointer;
}

table th {
    padding: 0.25em 0.25em!important;
}



.advancedText {
    margin-bottom: 1rem!important;
}



h5 {
    font-size: 1.4rem!important;
    margin: 0!important;
}


.accordion-tabs {
    display: none;
  }

  .accordion-active .accordion-item__label {
    padding-bottom: 0;
    cursor: inherit;
  }

  @media (min-width: 600px) {
    .accordion-tabs {
      display: flex;
      background: rgba(68, 127, 255, 0.1);
    }
    .accordion-tabs .accordion-tab {
      background: rgba(0, 0, 0, 0.3);
      padding: .5rem .5rem;
      font: inherit;
      flex: 1;
      border: none;
      cursor: pointer;
      transition: background 0.1s ease;
      margin:0.1rem;
    }
    .accordion-tabs .accordion-tab:hover {
      background: rgba(249, 249, 249, 0.01);
    }

    
    .accordion-tabs .accordion-tab:last-child {
      border-right: 0;
    }
    .accordion-tabs .accordion-tab.accordion-active {
      background: #89a0a7;
    }
    .accordion-item {
        display: none;
        /*
      padding: 2.4rem;
      border: none;
      background: #f9f9f9;
      min-height: 260px;*/
    }
    .accordion-item.accordion-active {
      display: block;
    }
    .accordion-item.accordion-active .accordion-item__container {
      padding: 0;
    }
  }

/*
.accordion {
    background: #f9f9f9;
  }
  .accordion-tabs {
    display: none;
  }
  .accordion-tabs :focus {
    outline: none;
  }
  .accordion-item {
    border-bottom: 1px solid #eaeaea;
  }
  .accordion-item:last-child {
    border: none;
  }
  .accordion-item__label {
    margin: 0;
    padding: 1.25rem;
    cursor: pointer;
    transition: padding 0.2s ease;
    position: relative;
  }
  .accordion-item__label:after {
    content: "";
    height: 4px;
    width: 4px;
    position: absolute;
    top: -4px;
    right: 1.25rem;
    bottom: 0;
    margin: auto;
    border: 3px solid transparent;
    border-radius: 2px;
    transform: rotate(45deg);
    border-color: transparent #447fff #447fff transparent;
    opacity: 1;
    transition: opacity 0.1s ease;
  }
  .accordion-item__label:hover {
    background: #d3e1ff;
  }
  .accordion-item__container {
    padding: 0 1.25em;
    height: 0;
    overflow: hidden;
    opacity: 0;
    transition: padding 0.2s ease, opacity 0.5s 0.15s ease;
  }
  .accordion-active {
    background: rgba(68, 127, 255, 0.1);
  }
  .accordion-active .accordion-item__label {
    padding-bottom: 0;
    cursor: inherit;
  }
  .accordion-active .accordion-item__label:hover {
    background: none;
  }
  .accordion-active .accordion-item__label:after {
    opacity: 0;
  }
  .accordion-active .accordion-item__container {
    padding: 1.25em;
    height: auto;
    opacity: 1;
  }
  .accordion-active .accordion-item__container p:first-child, .accordion-active .accordion-item__container h1:first-child, .accordion-active .accordion-item__container h2:first-child, .accordion-active .accordion-item__container h3:first-child, .accordion-active .accordion-item__container h4:first-child, .accordion-active .accordion-item__container h5:first-child, .accordion-active .accordion-item__container h6:first-child {
    margin-top: 0;
  }
  .accordion-active .accordion-item__container p:last-child, .accordion-active .accordion-item__container h1:last-child, .accordion-active .accordion-item__container h2:last-child, .accordion-active .accordion-item__container h3:last-child, .accordion-active .accordion-item__container h4:last-child, .accordion-active .accordion-item__container h5:last-child, .accordion-active .accordion-item__container h6:last-child {
    margin-bottom: 0;
  }
  @media (min-width: 600px) {
    .accordion-tabs {
      display: flex;
      background: rgba(68, 127, 255, 0.1);
    }
    .accordion-tabs .accordion-tab {
      background: rgba(68, 127, 255, 0.1);
      padding: 1rem 2rem;
      font: inherit;
      flex: 1;
      border: none;
      cursor: pointer;
      transition: background 0.1s ease;
    }
    .accordion-tabs .accordion-tab:hover {
      background: rgba(249, 249, 249, 0.01);
    }
    .accordion-tabs .accordion-tab:last-child {
      border-right: 0;
    }
    .accordion-tabs .accordion-tab.accordion-active {
      background: #f9f9f9;
    }
    .accordion-item {
      padding: 2.4rem;
      display: none;
      border: none;
      background: #f9f9f9;
      min-height: 260px;
    }
    .accordion-item__label, .accordion-item__container {
      padding: 0;
      transition: inherit;
    }
    .accordion-item__label {
      margin-bottom: 1.5rem;
    }
    .accordion-item.accordion-active {
      display: block;
    }
    .accordion-item.accordion-active .accordion-item__container {
      padding: 0;
    }
  }
  * {
    box-sizing: border-box;
  }
  .accordion {
    box-shadow: 0 1em 2em -0.9em rgba(0, 0, 0, 0.7);
    border-radius: 10px;
    overflow: hidden;
    width: 100%;
    max-width: 400px;
  }
  @media (min-width: 600px) {
    .accordion {
      max-width: 600px;
    }
  }
  .accordion + p {
    color: rgba(255, 255, 255, 0.8);
    font-weight: 300;
    font-size: 0.9rem;
    margin-top: 2rem;
  }
  
  body {
    background: #3b70fc;
    display: flex;
    flex-direction: column;
    font-size: 1rem;
    justify-content: center;
    align-items: center;
    height: 100vh;
  }*/
  

